--- a/package.json
+++ b/package.json
@@ -4,26 +4,99 @@
     "build": "rimraf ./build && truffle compile",
     "lint:sol": "solium --dir ./contracts",
     "lint:js": "prettier migrations/* test/* --write",
-    "clean:install": "rimraf node_modules && yarn install"
+    "clean:install": "rimraf node_modules && yarn install",
+    "clean:js": "rimraf buildClient buildServer",
+    "start": "yarn run clean:js && NODE_ENV=development babel-watch server/index.js"
+  },
+  "devDependencies": {
+    "autodll-webpack-plugin": "^0.3.4",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-universal-import": "^1.2.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-watch": "^2.0.6",
+    "bluebird": "^3.5.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-compat": "^2.3.0",
+    "eslint-plugin-css-modules": "^2.7.5",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.7.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react-ssr": "^1.0.3",
+    "eslint-plugin-redux-saga": "^0.6.0",
+    "eslint-plugin-security": ">= 1.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "extract-css-chunks-webpack-plugin": "^2.0.15",
+    "file-loader": "^1.1.6",
+    "ganache-cli": "^6.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "jest": "^21.2.1",
+    "json-loader": "^0.5.4",
+    "lint-staged": "^4.2.3",
+    "prettier": "^1.4.4",
+    "react-hot-loader": "^3.0.0",
+    "rimraf": "^2.6.2",
+    "solium": "^1.1.7",
+    "stats-webpack-plugin": "^0.6.1",
+    "style-loader": "^0.13.1",
+    "truffle": "^4.1.13",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "webpack": "^3.5.4",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-hot-server-middleware": "^0.1.0",
+    "write-file-webpack-plugin": "^4.1.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.56",
+    "@material-ui/core/core": "^1.4.3",
+    "@material-ui/core/icons": "^2.0.1",
     "babel-eslint": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "bignumber.js": "git+https://github.com/debris/bignumber.js#master",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-compat": "^2.3.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-promise": "^3.8.0",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "ethereumjs-abi": "^0.6.5",
+    "express": "^4.15.2",
+    "fetch-everywhere": "^1.0.5",
+    "history": "^4.6.3",
+    "ip": "^1.1.5",
     "openzeppelin-solidity": "^1.11.0",
-    "prettier": "^1.13.4",
-    "rimraf": "^2.6.2",
-    "solium": "^1.1.7",
-    "truffle": "^4.1.13",
+    "ramda": "^0.25.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-jss": "^8.3.5",
+    "react-redux": "^5.0.5",
+    "react-universal-component": "^2.5.0",
+    "recompose": "^0.26.0",
+    "redux": "^3.7.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-first-router": "^1.9.15",
+    "redux-first-router-link": "^1.1.4",
+    "redux-saga": "^0.16.0",
+    "redux-saga-effects": "^1.1.0",
+    "reselect": "^3.0.1",
+    "transition-group": "^0.0.2",
+    "truffle-contract": "^3.0.2",
     "truffle-wallet-provider": "^0.0.5",
-    "web3-utils": "^1.0.0-beta.35"
+    "web3": "^0.20.4",
+    "web3-provider-engine": "^13.6.0",
+    "web3-utils": "^1.0.0-beta.35",
+    "webpack-flush-chunks": "^1.1.22"
   }
 }
