contracts deployed... still need to setup ethLoading so that contract functions are called at the right time

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint:js": "prettier migrations/* test/* --write",
     "clean:install": "rimraf node_modules && yarn install",
     "clean:js": "rimraf buildClient buildServer",
-    "start": "yarn run clean:js && NODE_ENV=development babel-watch server/index.js"
+    "start": "yarn run clean:js && NODE_ENV=development babel-watch server/index.js",
+    "migrate:contracts:rinkeby": "truffle migrate --network rinkeby"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.3.4",
@@ -52,6 +53,7 @@
     "stats-webpack-plugin": "^0.6.1",
     "style-loader": "^0.13.1",
     "truffle": "^4.1.13",
+    "truffle-hdwallet-provider": "^0.0.6",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.5.4",
     "webpack-dev-middleware": "^1.12.0",
@@ -61,9 +63,8 @@
     "write-file-webpack-plugin": "^4.1.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
-    "@material-ui/core/core": "^1.4.3",
-    "@material-ui/core/icons": "^2.0.1",
+    "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^2.0.1",
     "babel-eslint": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -71,6 +72,7 @@
     "bignumber.js": "git+https://github.com/debris/bignumber.js#master",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "ethereumjs-abi": "^0.6.5",
     "express": "^4.15.2",
     "fetch-everywhere": "^1.0.5",
@@ -94,7 +96,7 @@
     "transition-group": "^0.0.2",
     "truffle-contract": "^3.0.2",
     "truffle-wallet-provider": "^0.0.5",
-    "web3": "^0.20.4",
+    "web3": "^1.0.0-beta.35",
     "web3-provider-engine": "^13.6.0",
     "web3-utils": "^1.0.0-beta.35",
     "webpack-flush-chunks": "^1.1.22"
