--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "transition-group": "^0.0.2",
     "truffle-contract": "^3.0.2",
     "truffle-wallet-provider": "^0.0.5",
-    "web3": "^1.0.0-beta.35",
+    "web3": "1.0.0-beta.33",
     "web3-provider-engine": "^13.6.0",
     "web3-utils": "^1.0.0-beta.35",
     "webpack-flush-chunks": "^1.1.22"
